# drforest

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  circle.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: buildwheel.yml  ga-buildwheel.yml
analysis-code/: Figure1.py  Figure2.py  Figure3.py  FigureS.4.py  Makefile  README.md  beijing_air_quality.py  compute_benchmark.py  lpd_simulations.py  make_test_curves.py  make_test_curves_ratios.py  process_real_benchmarks.py  process_sensitivity.py  process_synthetic_simulation.py  real_benchmarks.py  sensitivity_analysis.py  synthetic_simulation.py
core/: CMakeLists.txt  README.md
core/src/: drforest.h
core/src/drforest/common/: backports.h  data_info.cpp  data_info.h  enums.h  macros.h  parallel.h  typedefs.h
core/src/drforest/dimension_reduction/: determine_slices.cpp  determine_slices.h  dr.cpp  dr.h  save.cpp  save.h  sir.cpp  sir.h
core/src/drforest/forest/: forest.cpp  forest.h  trainer.cpp  trainer.h
core/src/drforest/math/: distributions.h  scaling.cpp  scaling.h  vector_utilities.h
core/src/drforest/samplers/: bootstrap.cpp  bootstrap.h  categorical.cpp  categorical.h  feature_sampler.cpp  feature_sampler.h  permute.cpp  permute.h  random_states.cpp  random_states.h
core/src/drforest/tree/: builder.cpp  builder.h  criterion.cpp  criterion.h  projector.cpp  projector.h  sample_utilities.cpp  sample_utilities.h  screener.cpp  screener.h  splitter.cpp  splitter.h  target_stats.cpp  target_stats.h  tree.cpp  tree.h
core/tests/: asserts.h  bootstrap_test.cpp  builder_test.cpp  categorical_test.cpp  criterion_test.cpp  datasets.cpp  datasets.h  determine_slices_test.cpp  feature_sampler_test.cpp  forest_trainer_test.cpp  permute_test.cpp  save_test.cpp  scaling_test.cpp  screener_test.cpp  sir_test.cpp  splitter_test.cpp  subsample_test.cpp  target_stats_test.cpp  tree_test.cpp  vector_utilities_test.cpp  whiten_test.cpp
core/tests/data/: athletes_X.txt  athletes_directions.txt  athletes_y.txt  quadratic_X.txt  quadratic_directions.txt  quadratic_y.txt
doc/: api.rst
drforest/: __init__.py  armadillo.pxd  armadillo.pyx  plots.py  version.py
drforest/datasets/: __init__.py  abalone.py  athletes.py  base.py  beijing.py  bodyfat.py  cpu_small.py  diabetes.py  fishcatch.py  kin8nm.py  openml.py  synthetic.py
drforest/dimension_reduction/: __init__.py  dimension_reduction.pxd  dimension_reduction.pyx  save.py  sir.py  slices.py
drforest/ensemble/: __init__.py  _forest.pxd  _forest.pyx  feature_importance.py  forest.py  sparse_pca.py  synthetic_data.py
examples/: beijing_air_quality.py  bench_sim1.py  local_subspace_importances.py  lsvi_example.py  process_curves.py  process_real_data.py  process_synthetic_data.py  process_test_curves.py  random_forest_importances.py  random_forest_kernel.py  real_data.py  synthetic_data.py
notebooks/: Dimension Reduction Forest (Kernel).ipynb  Dimension Reduction Forests (Variable Importance).ipynb  Dimension Reduction Forests.ipynb
(+20 files in other folders)
